<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".StartActivity">


    <TextView
        android:id="@+id/textViewCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewCaption"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewCaption"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@id/textViewCaption"
        app:layout_constraintTop_toTopOf="@id/textViewCaption"
        app:layout_constraintStart_toEndOf="@id/textViewCaption"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/transportation" />

    <TextView
        android:id="@+id/textViewClientNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20sp"
        android:text="@string/textViewClientNumber"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCaption" />

    <EditText
        android:id="@+id/editTextClientNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/editTextClientNumber"
        app:layout_constraintBottom_toBottomOf="@id/textViewClientNumber"
        app:layout_constraintStart_toEndOf="@id/textViewClientNumber"
        app:layout_constraintTop_toTopOf="@id/textViewClientNumber" />

    <TextView
        android:id="@+id/textViewTypeOfTransport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/textViewTypeOfTransport"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewClientNumber" />

    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/textViewTypeOfTransport"
        app:layout_constraintBottom_toBottomOf="@id/textViewTypeOfTransport"
        app:layout_constraintStart_toEndOf="@id/textViewTypeOfTransport"
        android:layout_marginLeft="10dp">

        <RadioButton
            android:id="@+id/rbBus"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Bus" />

        <RadioButton
            android:id="@+id/rbMetro"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Metro" />

        <RadioButton
            android:id="@+id/rbPrivateTransport"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Private Transport" />

        <RadioButton
            android:id="@+id/rbTaxi"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Taxi" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewNbKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100sp"
        android:layout_marginTop="20sp"
        android:text="@string/textViewNbKm"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTypeOfTransport" />

    <EditText
        android:id="@+id/editTextNbKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/editTextNbKm"
        app:layout_constraintBottom_toBottomOf="@id/textViewNbKm"
        app:layout_constraintStart_toEndOf="@id/textViewNbKm"
        app:layout_constraintTop_toTopOf="@id/textViewNbKm" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="65dp"
        android:text="Save"
        style="@style/button"/>

    <Button
        android:id="@+id/btnNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btnSave"
        app:layout_constraintBottom_toBottomOf="@id/btnSave"
        app:layout_constraintStart_toEndOf="@id/btnSave"
        android:layout_marginLeft="80dp"
        android:text="New"
        style="@style/button"/>

    <Button
        android:id="@+id/btnLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btnNew"
        app:layout_constraintBottom_toBottomOf="@id/btnNew"
        app:layout_constraintStart_toEndOf="@id/btnNew"
        android:layout_marginLeft="80dp"
        android:text="Load"
        style="@style/button"/>

    <Button
        android:id="@+id/btnEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btnSave"
        app:layout_constraintBottom_toBottomOf="@id/btnSave"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="End"
        style="@style/button"/>

    <TextView
        android:id="@+id/textViewAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="20sp"
        android:text="@string/textViewAdmin"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editTextAdminPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editTextAdminPass"
        app:layout_constraintBottom_toBottomOf="@id/textViewAdmin"
        app:layout_constraintStart_toEndOf="@id/textViewAdmin"
        app:layout_constraintTop_toTopOf="@id/textViewAdmin" />

    <Button
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/textViewAdmin"
        app:layout_constraintBottom_toBottomOf="@id/textViewAdmin"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="10dp"
        android:text="Go"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        style="@style/admin_button"/>
</android.support.constraint.ConstraintLayout>